Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2883

Windows: QML Debugging does not work: Freshly built qmlobserver/qmldump crash

XMLWordPrintable

    • f1fb0bddb11d69355784953a6cc0364f9fa25d3e

      Situation: The Qt version used for the project is MSVC2010-built debug. Qt Creator is taken from the package (VS2008).
      No usable stack trace occurs.
      Same with MinGW.
      Also, after this happened, the debugging session is still active and causes an exit prompt (that is,. the case of a crashing observer is not properly handled in the engine).

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes