src/plugins/qmlprojectmanager/qmlproject.cpp
@@ -131,11 +131,16 @@ void QmlProject::refresh(RefreshOptions options)
     QmlJS::ModelManagerInterface::ProjectInfo pinfo(this);
     pinfo.sourceFiles = files();
     pinfo.importPaths = importPaths();
+    pinfo.qmlDumpPath = Qt4ProjectManager::QmlDumpTool::qmlDumpPath(this);
 
-    if (pinfo.qmlDumpPath.isNull()) {
-        pinfo.qmlDumpPath = Qt4ProjectManager::QmlDumpTool::qmlDumpPath(this);
+    if (activeTarget()) {
+        if (const QmlProjectRunConfiguration *runConfig =
+                qobject_cast<QmlProjectRunConfiguration*>(activeTarget()->activeRunConfiguration())) {
+            if (runConfig->qtVersion()) {
+                pinfo.qmlDumpEnvironment = runConfig->qtVersion()->qmlToolsEnvironment();
+            }
+        }
     }
-
     m_modelManager->updateProjectInfo(pinfo);
 }
 
