src/plugins/qt4projectmanager/qt4project.cpp
@@ -597,13 +597,11 @@ void Qt4Project::updateQmlJSCodeModel()
             const QString qtVersionImportPath = qtVersion->versionInfo().value("QT_INSTALL_IMPORTS");
             if (!qtVersionImportPath.isEmpty())
                 projectInfo.importPaths += qtVersionImportPath;
+            projectInfo.qmlDumpEnvironment = qtVersion->qmlToolsEnvironment();
+            projectInfo.qmlDumpPath = QmlDumpTool::qmlDumpPath(this);
         }
     }
     projectInfo.importPaths.removeDuplicates();
-
-    if (projectInfo.qmlDumpPath.isNull()) {
-        projectInfo.qmlDumpPath = QmlDumpTool::qmlDumpPath(this);
-    }
 
     modelManager->updateProjectInfo(projectInfo);
 }
